# project.py

./: .gitignore  README.md  project.py  pyproject.toml
.github/workflows/: main.yml
presets/: cpp.toml
templates/butts/: qa-cache-test.txt  qa2.txt
templates/cpp/xmake/: targets.lua  workspace.lua
templates/cpp/xmake/_write_once_/: xmake.lua
templates/git/: .gitattributes
templates/git/_append_/: .gitignore
tests/: _fakes.py  test_append_blocks.py  test_blob_sha.py  test_call.py  test_clang_tidy.py  test_cli.py  test_config.py  test_init.py  test_lock.py  test_resolve.py  test_self_update.py  test_source.py  test_substitute.py  test_sync.py  test_template_listing.py  test_tree_cache.py
